--- a/src/components/css/TransformationMatrix.css
+++ b/src/components/css/TransformationMatrix.css
@@ -37,7 +37,7 @@
 .title-descompotition {
     width: 100%;
     background-color: #fff;
-    color: #000;
+    color: #D36135;
     padding: 20px 0;
     margin: 0 0 10px 0;
 }
