--- a/src/components/css/Table.css
+++ b/src/components/css/Table.css
@@ -15,9 +15,12 @@
     flex-direction: column;
     align-items: center;
 }
+.table thead {
+    width: 80%;
+}
 .table-titles {
-    display: flex;
-    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     font-size: 25px;
     font-family:Arial, Helvetica, sans-serif;
     margin: 20px 0;
@@ -29,26 +32,14 @@
     flex-direction: column;
     align-items: center;
     color: #000;
-
 }
 .table-params tr {
     width: 100%;
-    display: flex;
-    justify-content: space-around;
+    display: inline-grid;
+    grid-template-columns: repeat(5, 1fr);
     font-size: 20px;
 }
-.table-params tr td:nth-child(2) {
-    padding-left: 100px;
-}
-.table-params tr td:nth-child(3) {
-    padding-left: 25px;
-}
-.table-params tr td:nth-child(4) {
-    padding-left: 25px;
-}
-.table-params tr td:last-child {
-    padding-left: 25px;
-}
+
 
 @media screen and (min-width: 800px) {
     .table-container {
