--- a/src/components/css/TransformationMatrix.css
+++ b/src/components/css/TransformationMatrix.css
@@ -40,6 +40,10 @@
 .matrix div {
     padding: 10px;
     border: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .title-descompotition {
@@ -66,5 +70,11 @@
     }
     .final-matrix {
         width: 85%;
+    }
+}
+
+@media (max-width: 900px) {
+    .matrix.final {
+        font-size: 10px; /* Solo 1 columna */
     }
 }
