--- a/src/components/css/TransformationMatrix.css
+++ b/src/components/css/TransformationMatrix.css
@@ -27,10 +27,10 @@
     gap: 8px;
     padding: 10px;
     border: none;
-    background-color: #f9f9f9;
+    background-color: #201f1f;
     text-align: center;
     font-family: monospace;
-    color: #000;
+    color: #fff;
 }
 
 .matrix.final {
@@ -59,6 +59,7 @@
     width: 100%;
     margin: 30px 0px 80px 0px;
 }
+
 .final-matrix-title {
     font-size: 1.4em;
 }
@@ -68,6 +69,12 @@
         border-radius: 20px;
         border: 3px solid #000;
     }
+
+    .matrix div {
+        border-radius: 10px;
+
+    }
+
     .final-matrix {
         width: 85%;
     }
@@ -75,6 +82,7 @@
 
 @media (max-width: 900px) {
     .matrix.final {
-        font-size: 10px; /* Solo 1 columna */
+        font-size: 10px;
+        /* Solo 1 columna */
     }
 }
