--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,13 @@
   
   margin: 0;
   margin-bottom: 80px;
-  padding: 40px 0;
-  font-size: 1.6em;
+  
+  border-radius: 0 0 30px 30px; /* opcional, da look más elegante */
+}
+.App-title h1 {
+  padding: 30px 20px;
+  font-size: 1.5em;
   color: #fff; /* texto blanco para contraste */
-  border-radius: 12px; /* opcional, da look más elegante */
 }
 
 
